实现解析字节码